--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -29,7 +29,7 @@
   justify-content: center;
   height: 100vh;
   background-color: var(--ifm-background-color);
-  font-family: Arial, sans-serif;
+  font-family: Montserrat, sans-serif;
   padding: 0 20px;
 }
 
@@ -43,21 +43,23 @@
 
 .main {
   text-align: center;
+  z-index: 99999;
 }
 
 .staticText {
   margin: 0;
-  font-size: 2rem;
-  color: var(--ifm-font-color-base);
+  font-size: 3rem;
+  color: #fff;
 }
 
 .typingAnimation {
+  font-size: 6rem;
   display: inline-block;
-  color: var(--ifm-font-color-base);
-  border-right: 2px solid var(--ifm-font-color-base);
+  color: #fff;
+  border-right: 2px solid #fff;
   white-space: nowrap;
   overflow: hidden;
-  animation: typing 3s steps(15, end) infinite,
+  animation: typing 7s steps(15, end) infinite,
     blink-caret 0.5s step-end infinite;
 }
 
@@ -66,7 +68,7 @@
     width: 0;
   }
   to {
-    width: 15ch; /* Adjust based on the length of your text */
+    width: 12ch; /* Adjust based on the length of your text */
   }
 }
 
@@ -76,6 +78,6 @@
     border-color: transparent;
   }
   50% {
-    border-color: var(--ifm-font-color-base);
+    border-color: #fff;
   }
 }
